<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (C) 2014 Keith Kyzivat

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">Ingress Stat Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="pic">Received Image</string>
    <string name="timestamp">Timestamp</string>
    <string name="agent_name">Agent Name</string>
    <string name="ap">AP</string>
    <string name="upv">Unique Portals Visited</string>
    <string name="portals_discovered">Portals Discovered</string>
    <string name="xm_collected">XM Collected</string>
    <string name="hacks">Hacks</string>
    <string name="resonators_deployed">Resonators Deployed</string>
    <string name="links_created">Links Created</string>
    <string name="control_fields_created">Control Fields Created</string>
    <string name="mu">Mind Units Captured</string>
    <string name="longest_link">Longest Link Ever Created</string>
    <string name="largest_control_field">Largest Control Field</string>
    <string name="xm_recharged">XM Recharged</string>
    <string name="xm_recharged2">XM Reoharged</string>
    <string name="portals_captured">Portals Captured</string>
    <string name="upc">Unique Portals Captured</string>
    <string name="resonators_destroyed">Resonators Destroyed</string>
    <string name="portals_neutralized">Portals Neutralized</string>
    <string name="links_destroyed">Enemy Links Destroyed</string>
    <string name="control_fields_destroyed">Enemy Control Fields Destroyed</string>
    <string name="distance_walked">Distance Walked</string>
    <string name="max_time_portal_held">Max Time Portal Held</string>
    <string name="max_time_link_maintained">Max Time Link Maintained</string>
    <string name="max_link_lengthxdays">Max Link Length x Days</string>
    <string name="max_time_field_held">Max Time Field Held</string>
    <string name="largest_field_muxdays">Largest Field MUs x Days</string>
    <string name="prev_stat_block">Previous Stat Block</string>
    <string name="next_stat_block">Next Stat Block</string>
    <string name="delete_current_stats">Delete Current Stats</string>
</resources>
