<!--
 Copyright (C) 2014 Keith Kyzivat

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.kkyzivat.ingress_stat_tracker.StatTrackerActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/agentNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agent_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/agentNameText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/apLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ap"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/apText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

             <TextView
                android:id="@+id/upvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upv"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/upvText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

             <TextView
                android:id="@+id/portalsDiscoveredLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portals_discovered"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/portalsDiscoveredText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/xmCollectedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xm_collected"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/xmCollectedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

             <TextView
                android:id="@+id/hacksLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hacks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/hacksText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/resonatorsDeployedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resonators_deployed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/resonatorsDeployedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/linksCreatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/links_created"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/linksCreatedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/controlFieldsCreatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/control_fields_created"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/controlFieldsCreatedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/muLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mu"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/muText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/longestLinkLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longest_link"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/longestLinkText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/largestControlFieldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_control_field"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/largestControlFieldText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/xmRechargedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xm_recharged"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/xmRechargedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/portalsCapturedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portals_captured"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/portalsCapturedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/upcLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upc"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/upcText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/resonatorsDestroyedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resonators_destroyed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/resonatorsDestroyedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/portalsNeutralizedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portals_neutralized"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/portalsNeutralizedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/linksDestroyedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/links_destroyed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/linksDestroyedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/controlFieldsDestroyedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/control_fields_destroyed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/controlFieldsDestroyedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/distanceWalkedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_walked"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/distanceWalkedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/maxTimePortalHeldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_time_portal_held"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/maxTimePortalHeldText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/maxTimeLinkMaintainedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_time_link_maintained"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/maxTimeLinkMaintainedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/maxLinkLengthxDaysLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_link_lengthxdays"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/maxLinkLengthxDaysText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/maxTimeFieldHeldLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_time_field_held"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/maxTimeFieldHeldText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/largestFieldMuxDaysLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_field_muxdays"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/largestFieldMuxDaysText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

            <ImageView
                android:id="@+id/picture"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/pic" />

        </LinearLayout>
</ScrollView>
